# anoptic-engine

./: .clangd  .gitignore  .gitmodules  .main.c.swp  AGENTS.md  ANO_MESHOPTIMIZER.md  ATTRIBUTIONS.md  CMakeCache.txt  CMakeLists.txt  CODE_REPORT.md  DESIGN_AUDIT.md  FONT_RENDER.md  LICENSE  NIX_LINUX.md  PIPELINES_PLAN.md  README.md  REFACTOR.md  RENDERER_REVIEW.md  RESOURCE_MANAGER_IMPL.md  STRUCT_PLANS.md  build.bat  build.sh  build2.bat  clip  diff1.txt  diff2.txt  diff3.txt  diff4.txt  fix_instance.py  flake.nix  hiz_comp.csv  main  main (copy).c  main.c  nsight_profile.csv  patch.py  phase4.py  phase4_part1.py  scratch_buffers.c  scratch_build.c  (+5 more)
.claude/: settings.json  settings.json.bak
.claude/tools/: .gitignore  screenshot-macos  screenshot-macos-winid.swift
.github/workflows/: cachix.yml  tests.yml
buildsystem/: buildsystem.md
cmake/: cmake.md  scrub_objects.cmake
docs/: AUDIO_PLAN.md  BUG-HUNT.md  BUGS.md  SWEEP-2026-07-16-results.md  TECH_SPEC.md  THEORY_SPEC.md  TODO.md  URGENT-audiorace.md  ano-language.md  conventions.md  data-oriented.md  data.md  docs.md  logger.md  logger_roadmap.md  math-conventions.md  math_conventions.md  nix-build-system.canvas.tsx  nixfuckery.md  notes.md  profiling.md  rendermerge.md  resource-manager-SoA.md  resource-manager-plan.md  resource-manager-unified.md  resource-manager.md  resourcemanager-STARTHERE.md  resourcemanager-comprehensive-report.md  resourcemanager-comprehensive.md  resourcemanager-real.md  string_progress.md  strings.md
docs/.archive/: archive.md  resource-manager-SoA.md  resource-manager-plan.md  resource-manager-unified.md  resource-manager.md  resourcemanager-comprehensive-progress.md  resourcemanager-comprehensive_annotated.md  strings.md
docs/benchmarks/: 2026-07-11-bench.md  2026-07-11-bench2.md  2026-07-11-crashreport.md  2026-07-12-macos-1.md  2026-07-12-macos-2.md  2026-07-14-crashreport-splice.md  2026-07-16-sweep.md  fpsclaims-claude.md  template.md
docs/builds/: nix-build-system.canvas.tsx
docs/ecs/: data.md
docs/music/: TECH_SPEC.md  THEORY_SPEC.md
docs/nix/: NIX_LINUX.md  nixfuckery.md
docs/references/: data-oriented.md  game-engine-architecture.md  lockfree.md  miniaudio-legend.md  notes.md  pipewire-abi.md  power_cdf.md  radiance-cascade-shadertoy.txt  radiance-cascades.md  renderer-regression-report-PR50.md  scanline_sweep.md  shader_history.md
docs/resourcemgr/: RESOURCE_MANAGER_IMPL.md  resource-manager-SoA.md  resource-manager-ownership.md  resource-manager-plan.md  resource-manager-unified.md  resource-manager.md  resourcemanager-real.md  verification-matrix.md
docs/text/: font-render.md  logger.md  strings.md  text-demo.md
docs/ui/: ui-render.md
include/: ano_strings.h  anoptic_audio.h  anoptic_blackbox.h  anoptic_collections.h  anoptic_config.h  anoptic_ecs.h  anoptic_filepath.h  anoptic_filesystem.h  anoptic_hashmap.h  anoptic_keybindings.h  anoptic_log.h  anoptic_log_crash.h  anoptic_logger.h  anoptic_logging.h  anoptic_math.h  anoptic_memalign.h  anoptic_memory.h  anoptic_memory_pools.h  anoptic_music.h  anoptic_render.h  anoptic_render_bridge.h  anoptic_res_audio.h  anoptic_res_graphics.h  anoptic_res_pack.h  anoptic_res_script.h  anoptic_res_world.h  anoptic_resources.h  anoptic_script.h  anoptic_strings.h  anoptic_strings_utf.h  anoptic_synth.h  anoptic_text.h  anoptic_threads.h  anoptic_threads_bridges.h  anoptic_time.h  anoptic_ui.h  anoptic_vulkan.h  include.md
lib/: lib.md
profile/: EventList.csv  analysis.yaml  bottom_up.csv  hotspots.csv  shader_pipelines.csv  top_down.csv
profile/shaders/: .~lock.textcoverage_glsl.csv#  flat_frag.csv  flat_frag_profile.csv  flat_mesh.csv  flat_mesh_profile.csv  shadow_blur_frag_profile.csv  shadow_cdf_profile.csv  shadow_sample_profile.csv  textcoverage_glsl.csv  (+2 more)
resources/: resources.md
scripts/: scripts.md
src/: src.md  vulkanMaster.c  vulkanMaster.h
src/audio/: CMakeLists.txt  ano_audio.c  audio.c  audio_bridge.h  audio_device_null.c  audio_fx.c  audio_fx.h  audio_internal.h  audio_linux.c  audio_macos.c  audio_mixer.c  audio_pull.h  audio_wav.c  audio_win64.c
src/audio/dsp/: biquad.h  delay.h  dynamics.h  env.h  grain.h  noise.h  osc.h  smooth.h  svf.h  wavetable.h
src/platform/: CMakeLists.txt
src/platform/linux/: linux_memory.c  linux_time.c
src/platform/windows/: win_memory.c  win_threads.c  win_time.c
src/resources/: CMakeLists.txt  resources_block.c  resources_block.h  resources_core.c  resources_ext.c  resources_ext.h  resources_ident.c  resources_internal.h  resources_models.c  resources_os.h  resources_place.c  resources_place.h  resources_posix.c  resources_read.c  resources_registry.c  resources_reload.c  resources_stream.c  resources_tel.c  resources_tel.h  resources_win64.c
src/resources/audio/: res_audio.c
src/resources/codec/: res_codec.c  res_codec.h
src/resources/graphics/: res_graphics.c
src/resources/pack/: res_pack.c  res_pack.h
src/resources/script/: res_script.c
src/resources/text/: res_font.c
src/resources/world/: res_level.c  res_world.c
tests/: CMakeLists.txt  VULKAN_PLANS.md  anotest_audio.c  anotest_audiodsp.c  anotest_audioguard.c  anotest_audioscene.c  anotest_audioshutguard.c  anotest_audiotone.c  anotest_blackbox.c  anotest_boottelemetryguard.c  anotest_bridgebench.c  anotest_bridgeguard.c  anotest_bridges.c  anotest_chariots.c  anotest_collections.c  anotest_descpoolguard.c  anotest_ecs.c  anotest_entitygrowguard.c  anotest_filesystem.c  anotest_flatorphanguard.c  anotest_fsguard.c  anotest_gfxshadermodguard.c  anotest_gltfguard.c  anotest_gltftexleakguard.c  anotest_gposwrapguard.c  anotest_imageviewguard.c  anotest_initdepthguard.c  anotest_insetscissorguard.c  anotest_limiterguard.c  anotest_logbench.c  anotest_logflood.c  anotest_logfuzz.c  anotest_logging.c  anotest_logsrcguard.c  anotest_logstrbench.c  anotest_logtail.c  anotest_memguard.c  anotest_memory.c  anotest_mempoolbench.c  anotest_mempools.c  (+86 more)
tests/fixtures/: journey_s42.anofix
tests/templates/: bench.h  rng.h  scratch.h  synthfix.h
tools/: gen_unicode_tables.c
(+363 files in other folders)
